--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,9 +23,8 @@
 </head>
 
 <body class="page">
-
   <include src="./partials/main.html"></include>
-
+  <include src="./partials/footer.html"></include>
   <script src="./assets/js/main.js"></script>
 </body>
 
